got rid of pinSpacing Issues by removing gsap from parent component and spreading it into seperate components

--- a/frontend/src/styles/ExperienceComponent.css
+++ b/frontend/src/styles/ExperienceComponent.css
@@ -26,5 +26,5 @@
 }
 
 .timeline {
-    z-index: 10;
+    z-index: 5;
 }
