--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,6 +1,7 @@
   .firstBlackSection{
     background: black;
   }
+  
   .hero, .experienceSection {
     z-index: 1;
     position: relative;
@@ -64,10 +65,6 @@
     color: white;
     padding: 20px 25vw;
     font-size: 20px;
-  }
-
-  .secondSection{
-    /* padding: 0 25vw; */
   }
 
   /* Skill Section */
